tests/unit/default/syntax-error/125-add-fk-table-dot.x.t
---- IN ----
+FK%child.|
---- OUT ----
---- ERR ----
syntax: expected <name> after `+FK%child.` near `|` at position 10 - at line 1
---- EXIT ----
1
